# leapfrogai-backend-summarization

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  log_config.yaml  log_config_dev.yaml  log_config_prod.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: environment.yaml  test.yaml
backends/health/: __init__.py  routes.py
backends/health/lib/: types.py
backends/summarization/: __init__.py  langchain_summarize.py  routes.py  summarize.py  types.py
backends/summarize/: guidance.py  langchain.py  routes.py  shared_prompts.py  summarize.py  types.py
backends/summarize/lib/: types.py
backends/summarize/lib/refinement/: outlines.py  refine.py
backends/summarize/lib/summarization/: summarize.py
backends/utils/: _openai.py  base_url.py  create_document.py  exceptions.py  openai_client.py  openai_config.py
manifests/: deploy.yaml
scripts/: download_gpt2.py  download_guidance_model.py
test/fixtures/: adversarial.txt  summarize-and-refine.txt  test.txt
