[project]
name = "summarize"
version = "0.0.1"

description = "ctransformers based backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "fastapi == 0.103.1",
    "pydantic == 2.3.0",
    "uvicorn == 0.23.2",
    "langchain == 0.0.343",
    "openai == 1.3.8",
    "tiktoken == 0.5.1",
]
requires-python = "==3.11.6"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "python-dotenv"]

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
exclude = ["chart"]
